# mcp-server-file-search-tool

./: .gitignore  README.md  config.py  config_example.json  pyproject.toml  server.py
utils/: __init__.py  file_reader.py  file_search.py  file_search_utils.py  file_type.py  message.py  path.py  path_masker.py  path_utils.py
